chore: add google adsense

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Never forget how to center a div again.">
+    <meta name="google-adsense-account" content="ca-pub-9387011392687218">
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
