--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>How to center a div</title>
+		<title>CSS Aligner</title>
 	</head>
 	<body>
 		<div id="app"></div>
