feat: add open graph image and meta tags

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			name="description"
-			content="Never forget how to center a div again."
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Helping you align your divs with ease." />
+
 		<meta name="google-adsense-account" content="ca-pub-9387011392687218" />
+
 		<link
 			rel="shortcut icon"
 			href="./src/assets/favicon.ico"
 			type="image/x-icon"
 		/>
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -22,7 +23,34 @@
 			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
 			rel="stylesheet"
 		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://cssaligner.vercel.app" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="CSS Aligner" />
+		<meta
+			property="og:description"
+			content="Helping you align your divs with ease."
+		/>
+		<meta
+			property="og:image"
+			content="./src/assets/og-image.png"
+		/>
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="cssaligner.vercel.app" />
+		<meta property="twitter:url" content="https://cssaligner.vercel.app" />
+		<meta name="twitter:title" content="CSS Aligner" />
+		<meta
+			name="twitter:description"
+			content="Helping you align your divs with ease."
+		/>
+		<meta
+			name="twitter:image"
+			content="./src/assets/og-image.png"
+		/>
+
 		<title>CSS Aligner</title>
 	</head>
 	<body>
