fix: fix og image by using imgur url

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="./src/assets/og-image.png"
+			content="https://i.imgur.com/rVgxlbj.png"
 		/>
 
 		<!-- Twitter Meta Tags -->
@@ -48,7 +48,7 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="./src/assets/og-image.png"
+			content="https://i.imgur.com/rVgxlbj.png"
 		/>
 
 		<title>CSS Aligner</title>
